--- a/ceminar1.html
+++ b/ceminar1.html
@@ -4,6 +4,50 @@
 	<meta charset="UTF-8">
  	<title> my site </title>
 	<link type="text/css" rel="stylesheet" href=".\style3.css"/>
+	<style>
+		#logo{
+	height: 20%;
+	width: 80%;
+	margin-top:0px;
+	margin-left:10%;
+	margin-right: 10%;
+	background-color:#FFC1C1;
+	}
+	#menu{
+	height: 70%;
+	width: 20%;
+	background-color:#b1ffff;
+	margin-left: 10%;
+	float: left;
+	}
+	#content{
+	width: 40%;
+	height: 70%;
+	float: left ;
+	background-color:#efefef;
+	margin-top:0px;
+	}
+	#footer{
+	margin-top:0px;
+	padding:0px;
+	height: 10%;
+	width: 80%;
+	margin-left:10%;
+	margin-right: 10%;
+	background-color:#b6fea5;
+	clear :both;
+	}
+	#ad{
+	height: 70%;
+	width: 20%;
+	float: left;
+	background-color:#FFFF99;
+	}
+	#web{
+	width:1720px;
+	height:960px;
+	}
+	</style>
 </head>
 <body>
 <div id="web">
